Atualização de funcionalidades para funcionamento do frontend